--- a/src/components/styles/TodoRender.module.css
+++ b/src/components/styles/TodoRender.module.css
@@ -26,7 +26,7 @@
 }
 
 .TodosTable td::-webkit-scrollbar {
-  height: 5px;
+  @apply h-1;
 }
 
 @media (max-width: 640px) {
